--- a/node/public/index.html
+++ b/node/public/index.html
@@ -273,7 +273,7 @@
 			<!-- <div id="testGH" style="width: 100%; height: 100%; overflow: hidden;position: relative; z-index: 1;display: inline-block;"></div> -->
 		</div>
 
-<form action="http://localhost:3000/start" method="POST">
+<form action="/start" method="POST">
  <input type="number", name="population_size" value=100>
  <input type="number" name="nbr_timesteps" value=100>
 <input type="number" name="dt_days" value=0.5>
@@ -287,7 +287,7 @@
 
 </form>
 
-<script src='script.js'></script>	
+<script src='./js/script.js'></script>	
 
 	</body>
 <html>
