way too fast and ugly layout but cleaned

--- a/node/public/index.html
+++ b/node/public/index.html
@@ -38,7 +38,7 @@
 
 		</style>
 
-		<style id="sliderStyleH" type="text/css">
+		<!-- <style id="sliderStyleH" type="text/css">
 			a {
 				cursor: pointer;
 			}
@@ -145,9 +145,9 @@
 			}
 
 		
-		</style>
+		</style> -->
 		
-		<script>
+		<!-- <script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -156,7 +156,7 @@
 		  ga('create', 'UA-103589215-2', 'auto');
 		  ga('send', 'pageview');
 
-		</script>
+		</script> -->
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/6.6.1/math.min.js"></script> -->
@@ -287,7 +287,7 @@
 
 </form>
 
-<script src='./js/script.js'></script>	
+<script src='./js/new_script.js'></script>	
 
 	</body>
 <html>
