--- a/node/public/index.html
+++ b/node/public/index.html
@@ -287,6 +287,8 @@
 
 </form>
 
+<!-- A library/code I developed for most simulations. "plots.js" -->
+<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/prajwalsouza/prajwalsouza.github.io/JS/plots.js"></script>
 <script src='./js/simplistic.js'></script>	
 
 	</body>
