add new param to web form

--- a/node/public/index.html
+++ b/node/public/index.html
@@ -81,12 +81,13 @@
  <label>Population size: <input type="number", name="population_size" value=100></label>
 <label>Number of timesteps: <input type="number" name="nbr_timesteps" value=100></label>
 <label>Dt days: <input type="text" name="dt_days" value=0.5></label>
-<label>Infaction duraction in days: <input type="number" name="infection_duration_days" value=10></label>
+<label>Infection duration in days: <input type="number" name="infection_duration_days" value=10></label>
 <label>Dimension x: <input type="text" name="dimension_x" value=1></label>
 <label>Dimension y:<input type="text" name="dimension_y" value=1></label>
 <label>Moving speed: <input type="text" name="moving_speed" value=0.1></label>
 <label>Infection probability: <input type="text" name="infection_probability_day" value=0.5></label>
 <label>Infection radius: <input type="text" name="infection_radius" value=0.5></label>
+<label>Initial infection proportion: <input type="text" name="initial_infection_proportion" value=0.1></label>
  <input type="submit" value="Submit">
 
 </form>
