--- a/node/public/index.html
+++ b/node/public/index.html
@@ -74,16 +74,20 @@
 			<h1>Epidemic Simulation</h1>
 	<h2>created by Adrian Stobbe</h2>
 	<h3>This work is inspired by <a href="https://prajwalsouza.github.io/Experiments/Epidemic-Simulation.html">Prajwalsouza JS Simulation</a></h3>
+	<p><b>Legend:</b></p>
+	<p style="color:blue";>Susceptible</p>
+	<p style="color:red";>Infected</p>
+	<p style="color:grey";>Recovered</p>
 				<div id="simpleCaseGraphH" style="width: 100%; height: 70%; overflow: hidden;position: absolute; z-index: 1;display: inline-block;"></div>
-				<p style="position:fixed; bottom: 10px;">Simulation parameters</p>
 <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
+<p  style="position: fixed; bottom: 80px; align-items: center;"><b>Simulation parameters:</b></p>
 <form action="/" method="POST", style="position: fixed; bottom: 50px; align-items: center;", id="SimParams",target="dummyframe">
  <label>Population size: <input type="number", name="population_size" value=100></label>
 <label>Number of timesteps: <input type="number" name="nbr_timesteps" value=100></label>
-<label>Dt days: <input type="text" name="dt_days" value=0.5></label>
+<!-- <label>Dt days: <input type="text" name="dt_days" value=0.5></label> -->
 <label>Infection duration in days: <input type="number" name="infection_duration_days" value=10></label>
-<label>Dimension x: <input type="text" name="dimension_x" value=1></label>
-<label>Dimension y:<input type="text" name="dimension_y" value=1></label>
+<!-- <label>Dimension x: <input type="text" name="dimension_x" value=1></label> -->
+<!-- <label>Dimension y:<input type="text" name="dimension_y" value=1></label> -->
 <label>Moving speed: <input type="text" name="moving_speed" value=0.1></label>
 <label>Infection probability: <input type="text" name="infection_probability_day" value=0.5></label>
 <label>Infection radius: <input type="text" name="infection_radius" value=0.5></label>
